# budgethq

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_SETUP.md  Home.py  IMPROVEMENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  extracted_text.txt  main.py  openapi.json  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  alembic.ini  migrate_data.py  requirements.txt  run_migrations.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_complete_initial_schema.py  003_add_cost_basis_to_bond_holdings.py  004_use_sast_time_default.py  005_sub_categories_emergency_savings.py  008_create_separate_tables_for_emergency_.py  009_salary_table.py  010_update_salary_table.py  013_ra_history_table.py  015_remove_current_value_col_from_.py  016_add_payslip_tables.py  017_remove_old_salary_tables.py  018_add_investec_integration.py  020_add_fund_source_to_emergency_savings.py  021_add_transaction_category_to_budget_.py  024_add_manual_bank_accounts.py  029_add_investment_portfolios.py  030_add_investment_portfolio_currency.py  032_add_target_allocation_enabled.py  034_add_cadence_to_budget_category.py  035_add_transaction_links.py  131155c7968f_add_has_investec_account_to_users.py  1e0f0e4a8813_add_budget_period_start_daymake.py  28c946322432_remove_group_from_budget_category.py  3f8b595bf8ea_add_emergency_ra_columns_to_budget_table.py  4e5c4f47f67f_remove_ai_insights_table.py  7a44be3ec5a2_add_manual_payslip_table.py  7e052336f872_update_ra_tables.py  83ec82edcf8e_add_excluded_to_budget_category.py  8dbccf986b0e_add_historical_price_tracking.py  9f3c2b1a7d11_add_investment_portfolios.py  add_user_sheets_table.py  af6a400f9228_add_budget_period_start_day.py  b7975c13ba58_initial_schema.py  c8f91d2e4b10_portfolio_history_and_instrument_type.py  d7e8f9a1b2c4_add_show_ra_under_investments.py  db93fb3c0fde_add_columns_to_salary_table.py  eb03699a2c48_add_user_sheets_table.py  f394d52ecd8e_emergency_savings.py
backend/app/: auth.py  budget_period.py  config.py  database.py  fx_service.py  gcs_service.py  history.py  investec_service.py  investec_sync.py  logging_config.py  logging_utils.py  logic.py  main.py  migrate_etf_data.py  models.py  payslip_extraction.py  portfolio_service.py  scheduler.py  sheets_service.py  tax_engine.py  transaction_budget_summary.py  transaction_categories.py  transaction_categorizer.py  transaction_links.py  transaction_pdf.py  transaction_query.py  utils.py
backend/app/middleware/: logging.py  request_id.py
backend/app/routers/: admin.py  analytics.py  auth.py  bond_transactions.py  bonds.py  budget.py  calculations.py  emergency.py  etf.py  etf_transactions.py  investec.py  investments.py  manual_accounts.py  payslip.py  portfolio.py  (+4 more)
backend/scripts/: hash_password.py
backup/: Dockerfile  backup_script.py  gcs_service.py  logging_config.py
data/: tfsa_portfolio.csv
data/budgets/: budget_data_default_user.json
db_init/: Dockerfile  gcs_client.py  init_db_from_backup.py  logging_config.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json.bak  package.json
frontend/src/: App.jsx
pages/: 1_Budget_Dashboard.py  2_TFSA_Portfolio.py
tests/: test_auth_authorized_users.py  test_budget_period.py  test_database_connection.py  test_history_contributions.py  test_transaction_pdf.py
utils/: auth.py
(+55 files in other folders)
