[project]
name = "budget-dashboard"
version = "2.0.0"
description = "Personal budget and TFSA portfolio management application"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.4.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "python-multipart>=0.0.6",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-cloud-storage>=2.10.0",
    "apscheduler>=3.10.0",
    "alembic>=1.12.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
]
backup = [
    "google-cloud-storage>=2.10.0",
    "apscheduler>=3.10.0",
]
db-init = [
    "google-cloud-storage>=2.10.0",
    "bcrypt>=4.0.1",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.10.0",
    "flake8>=6.1.0",
]

# Build system not needed - we run the app directly, not as an installed package
# [build-system]
# requires = ["setuptools>=68.0", "wheel"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools]
# packages = ["backend.app"]

# [tool.setuptools.package-data]
# "*" = ["*.json", "*.csv"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
